crates/swc/tests/tsc-references/classExtendsItselfIndirectly2_es5.1.normal.js
import _class_call_check from "@swc/helpers/lib/_class_call_check.js";
import _inherits from "@swc/helpers/lib/_inherits.js";
import _create_super from "@swc/helpers/lib/_create_super.js";
var C = /*#__PURE__*/ function(_E) {
    "use strict";
    _inherits(C, _E);
    var _super = _create_super(C);
    function C() {
        _class_call_check(this, C);
        return _super.apply(this, arguments);
    }
    return C;
} // error
(N.E);
var M;
(function(M1) {
    var D = /*#__PURE__*/ function(C) {
        "use strict";
        _inherits(D, C);
        var _super = _create_super(D);
        function D() {
            _class_call_check(this, D);
            return _super.apply(this, arguments);
        }
        return D;
    }(C);
    M1.D = D;
})(M || (M = {}));
var N;
(function(N1) {
    var E = /*#__PURE__*/ function(_D) {
        "use strict";
        _inherits(E, _D);
        var _super = _create_super(E);
        function E() {
            _class_call_check(this, E);
            return _super.apply(this, arguments);
        }
        return E;
    }(M.D);
    N1.E = E;
})(N || (N = {}));
var O;
(function(O) {
    var C2 = /*#__PURE__*/ function(_E2) {
        "use strict";
        _inherits(C2, _E2);
        var _super = _create_super(C2);
        function C2() {
            _class_call_check(this, C2);
            return _super.apply(this, arguments);
        }
        return C2;
    } // error
    (Q1.E2);
    var P1;
    (function(P) {
        var D2 = /*#__PURE__*/ function(C2) {
            "use strict";
            _inherits(D2, C2);
            var _super = _create_super(D2);
            function D2() {
                _class_call_check(this, D2);
                return _super.apply(this, arguments);
            }
            return D2;
        }(C2);
        P.D2 = D2;
    })(P1 || (P1 = {}));
    var Q1;
    (function(Q) {
        var E2 = /*#__PURE__*/ function(_D2) {
            "use strict";
            _inherits(E2, _D2);
            var _super = _create_super(E2);
            function E2() {
                _class_call_check(this, E2);
                return _super.apply(this, arguments);
            }
            return E2;
        }(P1.D2);
        Q.E2 = E2;
    })(Q1 || (Q1 = {}));
})(O || (O = {}));
